--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -3,4 +3,6 @@ img[src$='#center'] {
   margin: 1.0rem auto;
   max-width: 100%;
   height: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
 }
